--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*tes */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -88,6 +87,12 @@ nav ul li a {
     padding: 50px 20px;
     display: flex;
     justify-content: space-between;
+}
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .message-section form {
