--- a/css/style.css
+++ b/css/style.css
@@ -60,30 +60,34 @@ nav ul li a {
     color: #333;
 }
 
-.headquarters-section {
-    text-align: center;
-    padding: 50px 20px;
-}
-
-.headquarters-section h2 {
-    margin-bottom: 30px;
-}
-
-.locations {
+.headquarters-section .locations {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .location {
-    margin: 0 20px;
+    text-align: center;
 }
 
 .circle {
     width: 100px;
     height: 100px;
-    background-color: #ddd;
     border-radius: 50%;
-    margin: 0 auto;
+    background-size: cover;
+    background-position: center;
+    margin: 0 auto 10px;
+}
+
+.circle.jakarta {
+    background-image: url('picture/jakarta.jpg');
+}
+
+.circle.depok {
+    background-image: url('picture/depok.jpg');
+}
+
+.circle.bogor {
+    background-image: url('picture/jakarta.jpg');
 }
 
 .message-section {
