--- a/css/style.css
+++ b/css/style.css
@@ -79,15 +79,15 @@ nav ul li a {
 }
 
 .circle.jakarta {
-    background-image: url('picture/jakarta.jpg');
+    background-image: url(fundamental-nox72\picture\jakarta.jpg);
 }
 
 .circle.depok {
-    background-image: url('picture/depok.jpg');
+    background-image: url(fundamental-nox72\picture\depok.jpg);
 }
 
 .circle.bogor {
-    background-image: url('picture/jakarta.jpg');
+    background-image: url(fundamental-nox72\picture\bogor.jpg);
 }
 
 .message-section {
